# fcpp-stage-framarin

src/: CMakeLists.txt  Doxyfile  make.sh
src/extras/docs/: doxymake.py
src/lib/: BUILD  beautify.hpp  data.hpp  settings.cpp  settings.hpp
src/lib/common/: multitype_map.hpp  option.cpp  option.hpp  ostream.hpp  traits.hpp
src/lib/component/: BUILD  base.hpp  calculus.cpp  calculus.hpp  logger.hpp  storage.cpp  storage.hpp
src/lib/coordination/: BUILD  basics.cpp  basics.hpp  slcs.hpp
src/lib/data/: BUILD  field.hpp  ordered.hpp  placed.cpp  placed.hpp
src/lib/gps/: CMakeLists.txt  gps_trace.cpp  gps_trace.hpp  test_main.cpp
src/lib/internal/: context.hpp
src/lib/option/: connect.hpp  metric.hpp
src/lib/simulation/: batch.hpp  simulated_positioner.hpp
src/test/: helper.hpp
src/test/common/: BUILD  option.cpp  serialize.cpp  tagged_tuple.cpp  traits.cpp
src/test/component/: calculus.cpp  storage.cpp
src/test/coordination/: basics.cpp
src/test/data/: BUILD  field.cpp  placed.cpp
